# pysparsematrixcolorings

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  test.yml  tests.yml
src/pysparsematrixcolorings/: __init__.py  coloring.py  compression.py  juliapkg.json
tests/: test_coloring.py
