[project]
name = "pysparsematrixcolorings"
version = "0.1.0"
description = "Python interface to the Julia package SparseMatrixColorings.jl"
readme = "README.md"
authors = [
    { name = "Guillaume Dalle", email = "22795598+gdalle@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "juliacall>=0.9.25",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pdoc>=15.0.3",
    "pip>=25.1.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
]
